# INTT-EMCAL

./: .gitattributes  README.md
InttSeedingTrackDev/: GNUmakefile
InttSeedingTrackDev/InttSeedTrackPerformance/: jyTrackPerformance.C
InttSeedingTrackDev/InttSeedTrackPerformance/macro/: jyTrackPerformance.C
InttSeedingTrackDev/InttSeedTrackPerformance/src/: CaloInfo.C  InttSeedTrackPerformance.cxx  InttSeedTracking.cxx  InttSeedTracking.h  JYInttSeedTrackPerformance.cxx  JYInttSeedTrackPerformance.h  JYInttSeedTracking.cxx  JYInttSeedTracking.h  SPHTracKuma.h
InttSeedingTrackDev/ML4Reco/: electron_pt0-10GeV_100k.list  test500k.list  test50k.list  test_finite.list  train500k.list  train50k.list
InttSeedingTrackDev/ML4Reco/Implement/macro/: PtCalcMLTutorial.C  PtCalcMLTutorial_origin.C  condor-data.job
InttSeedingTrackDev/ML4Reco/Implement/src/: Makefile  PtCalcMLTutorial.C  PtCalculator.cc  PtCalculator.h
InttSeedingTrackDev/ML4Reco/combine2/: data_combined.py  model_combined.py  model_energy.py  test_combined.py  train_combined.py
InttSeedingTrackDev/ML4Reco/combine2/model_weight/: best_model_combined.pt
InttSeedingTrackDev/ML4Reco/combine2/outputFile/: pt_relative_error_combined.root
InttSeedingTrackDev/ML4Reco/dataset/: checkfile.C
InttSeedingTrackDev/ML4Reco/version1/: best_model.pt  data.py  final_model.pt  model.py  test_and_save_root.py  train.py
InttSeedingTrackDev/ML4Reco/version2/: test_ptbin.py  train_ptbin.py
InttSeedingTrackDev/ML4Reco/version2/model_weight/: best_model_pt_0.0_10.0.pt  best_model_pt_0.0_10.0_INTT_CaloI.pt  best_model_pt_0.0_10.0_INTT_CaloIwoE.pt  best_model_pt_0.0_2.0.pt  best_model_pt_0.0_2.0_INTT_CaloI.pt  (+15 more)
InttSeedingTrackDev/ML4Reco/version3/: data.py  model.py  test_ptbin.py  train_ptbin.py
InttSeedingTrackDev/ML4Reco/version4/: data.py  model.py  test_ptbin.py  train_ptbin.py
InttSeedingTrackDev/ParticleGen/macro/: Fun4All_physiTuto.C  G4Setup_sPHENIX_ly.C  run_condor.job  run_job.sh
InttSeedingTrackDev/ParticleGen/physiTuto/: CaloOnly.cc  Makefile.am  tutorial.cc  tutorial.h
InttSeedingTrackDev/PythiaGen/physiTuto/: tutorial.cc
JY_Framework/: Fun4All_SiCaloDemo.C  README.md
JY_Framework/module/: LinkDef.h  Makefile.am  ModuleIntro.md  SiCaloMatchedTrack.cc  SiCaloMatchedTrack.h  SiCaloMatchedTrackContainer.cc  SiCaloMatchedTrackContainer.h  SiCaloMatcher.cc  SiCaloMatcher.h  autogen.sh  configure.ac
(+3 files in other folders)
